--- a/vertigo/examples/robustISAM2/CMakeLists.txt
+++ b/vertigo/examples/robustISAM2/CMakeLists.txt
@@ -17,8 +17,11 @@ include_directories(${PROJECT_SOURCE_DIR}/../../include/gtsam4)
 include_directories(${GTSAM_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${EIGEN3_INCLUDE_DIR})
 set (LINK_LIBRARIES ${LINK_LIBRARIES} vertigo-gtsam ${GTSAM_LIBS} ${Boost_LIBRARIES} ${EIGEN3_LIBRARIES})
 
+add_library(planarSLAM SHARED ${PROJECT_SOURCE_DIR}/../../src/planarSLAM.cpp)
+# target_link_libraries(aicpClassification ${OpenCV_LIBS})
+
 add_executable(robustISAM2 robustISAM2.cpp)
-target_link_libraries(robustISAM2 ${LINK_LIBRARIES}) 
+target_link_libraries(robustISAM2 ${LINK_LIBRARIES} planarSLAM gtsam)
 
 set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}) # specify where the resulting binaries should be created
 
